<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.uottawa.simplecalculator.MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/resultEdit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="textPersonName" />

            <LinearLayout
                android:id="@+id/ButtonsLayout01"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn07"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="btn07Click"
                    android:text="7"
                    tools:text="@string/button_07" />

                <Button
                    android:id="@+id/btn08"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="btn08Click"
                    android:text="8"
                    tools:text="@string/button_08" />

                <Button
                    android:id="@+id/btn09"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="btn09Click"
                    android:text="9"
                    tools:text="@string/button_09" />

                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="btnAddClick"
                    android:text="+"
                    tools:text="@string/button_add" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ButtonsLayout02"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn04"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="btn04Click"
                    android:text="4"
                    tools:text="@string/button_04" />

                <Button
                    android:id="@+id/btn05"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="btn05Click"
                    android:text="5"
                    tools:text="@string/button_05" />

                <Button
                    android:id="@+id/btn06"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="btn06Click"
                    android:text="6"
                    tools:text="@string/button_06" />

                <Button
                    android:id="@+id/btnMinus"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="btnMinusClick"
                    android:text="-"
                    tools:text="@string/button_minus" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ButtonsLayout03"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn01"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="btn01Click"
                    android:text="1"
                    tools:text="@string/button_01" />

                <Button
                    android:id="@+id/btn02"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="btn02Click"
                    android:text="2"
                    tools:text="@string/button_02" />

                <Button
                    android:id="@+id/btn03"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="btn03Click"
                    android:text="3"
                    tools:text="@string/button_03" />

                <Button
                    android:id="@+id/btnDivide"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="btnDivideClick"
                    android:text="/"
                    tools:text="@string/button_divide" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ButtonsLayout04"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnClear"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="btnClearClick"
                    android:text="C"
                    tools:text="@string/button_clear" />

                <Button
                    android:id="@+id/btn00"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="btn00Click"
                    android:text="0"
                    tools:text="@string/button_00" />

                <Button
                    android:id="@+id/btnDot"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="btnDotClick"
                    android:text="."
                    tools:text="@string/button_dot" />

                <Button
                    android:id="@+id/btnMultiply"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="btnMultiplyClick"
                    android:text="*"
                    tools:text="@string/button_multiply" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ButtonsLayout05"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnResult"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="btnResultClick"
                    android:text="="
                    tools:text="@string/button_result" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_07"
        tools:layout_editor_absoluteX="62dp"
        tools:layout_editor_absoluteY="-25dp" />
</android.support.constraint.ConstraintLayout>
